tests/NormalTests/paczka1/fuzzy1/44895348.err
Error in line 6: S376 A118 22,4
Error in line 17: X1jRM A746 23,4
Error in line 8: eWgiDvhRWq A746 23,7
Error in line 27: yH7QEnkT A118 -1,7
Error in line 26: X1jRM A183 156,5
Error in line 30: X1jRM S376 94,90
Error in line 39: IEzZS S379 11,7
